other-vpol/restrict-sa-automount-sa-token/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-sa-automount-sa-token-exceptions
policies:
- ../restrict-sa-automount-sa-token.yaml
resources:
- ../.kyverno-test/resource.yaml
exceptions:
- exceptions.yaml
results:
- isValidatingPolicy: true
  kind: ServiceAccount
  policy: restrict-sa-automount-sa-token
  resources:
  - bad-svc
  result: pass
- isValidatingPolicy: true
  kind: ServiceAccount
  policy: restrict-sa-automount-sa-token
  resources:
  - good-svc
  result: pass
